--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,78 @@
 }
 
 .background {
-  background-image: url(download.jpg);
+  background-image: url(images/download.jpg);
   background-size: cover;
-  height: 1900px;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+  background-color: #212326;
+}
+
+.navbar-links {
+  margin-right: 125px;
 }
 
 .nav-link {
-  padding-top: 45px;
-
   color: white;
+  padding-bottom: 15px;
+  border-bottom: 2px solid transparent;
+}
+
+.nav-link:active {
+  border-bottom: 2px solid #e9543c;
+}
+
+.nav-link:hover {
+  border-bottom: 2px solid #e9543c;
+  color: #cccccc;
 }
 
 .logo {
+  height: 85px;
+  width: 175px;
+  margin-left: 170px;
+}
+
+.intro {
+  width: 90%;
+  margin: 50px auto 50px auto;
+  padding-bottom: 100px;
+  font-size: 56px;
+  font-family: 'Cardo', serif;
+  color: white;
+}
+
+#carouselExampleControls {
+  background-image: linear-gradient(to right, #557d91, #db5e4c);
+  height: 150px;
+}
+
+.carousel-item {
+  height: 100px;
+  width: 100px;
+  margin: auto 0 auto 0;
+}
+
+.carousel-inner {
+  justify-items: center;
+}
+
+.carousel-control-prev {
+  background-color: transparent;
+  border: none;
+}
+
+.carousel-control-next {
+  background-color: transparent;
+  border: none;
+}
+
+@media only screen and (min-width: 480) {
+  .navbar {
+    background-color: transparent;
+  }
 }
