--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@
 
 .intro {
   width: 90%;
-  margin: 50px auto 50px auto;
+  margin: 50px auto 0 auto;
   padding-bottom: 100px;
   font-size: 56px;
   font-family: "Cardo", serif;
@@ -73,10 +73,46 @@
   border: none;
 }
 
-@media only screen and (min-width: 480) {
-  .navbar {
-    background-color: transparent;
-  }
+.btn_section {
+  background-color: #f4eae9;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+.btn_intro {
+  width: 85%;
+  margin: 0 auto 0 auto;
+  padding-bottom: 30px;
+  text-align: center;
+  font-size: 32px;
+  font-family: big-caslon-fb,serif;
+}
+
+.btn_div {
+  display: flex;
+  justify-content: space-around;
+}
+
+.btn_container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 25%;
+}
+
+.btn {
+  background-color: #f4eae9;
+  padding: 20px 10px;
+  border: 2px solid #212326;
+  border-radius: 0;
+  font-family: big-caslon-fb,serif;
+  font-size: 32px;
+}
+
+.btn_msg {
+  font-family: -macosx,sans-serif !important;
+  padding-top: 10px;
+  font-size: 14px;
 }
 
 .contact {
@@ -144,4 +180,25 @@
 .emailLink:link {
   color: #cccccc;
   text-decoration: none;
+}
+
+@media only screen and (min-width: 480px) {
+  .navbar {
+    background-color: transparent;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .btn_div {
+    flex-direction: column;
+  }
+
+  .btn_container {
+    margin: 20px auto 0 auto;
+    width: 80%;
+  }
+
+  .btn_msg {
+    text-align: center;
+  }
 }
